# ebay-automation

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  ReadMeAIBugs.md  conftest.py  pyproject.toml  pytest.ini
.claude/skills/add-scenario/: SKILL.md
.claude/skills/atlas-sync/: SKILL.md
.claude/skills/fixture-recorder/: SKILL.md
.claude/skills/flake-triage/: SKILL.md
.claude/skills/qa-debug/: SKILL.md
.github/workflows/: regression.yml
ai/prompts/: 00_cleanup.md  01_scaffold.md  02_atlas_db_infra.md  03_components.md  04_services_utilities.md  05_tests.md  06_reporting_ci.md  07_scripts.md  08_documentation.md
atlas/: EDGE_CASES.md  FLOWS.md  PAGES.md  SELECTORS.md
components/: ATLAS.md  base.py
components/header/: ATLAS.md
components/listing/: ATLAS.md
components/search/: ATLAS.md
db/: ATLAS.md  data.yaml  demo_scenarios.json  environments.json  expectations.json  scenarios.json
docs/: index.html
docs/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
docs/data/attachments/: 15d0a188605086c7.txt  172cbb9d9cded505.txt  1ba3dbd571e34a08.txt  1c7e6804ceea7e0.txt  2b35627ee1275640.txt  35072b7a1126417d.txt  431202fa1d20eddb.txt  43c5af360fe2661e.txt  480b208d5321bb1d.txt  51883d9e5e6bb44d.txt  51eaa4db946bb132.txt  52e83a16de1eddd0.txt  561b9d09334f632f.txt  59864443dedb5b17.txt  5d119f5ad6f92ec1.txt  6561563784f44ab6.txt  697f1ff9d387b934.txt  6b0f70bd73d40c42.txt  6f1e5c9928db622f.txt  703ee8918d457e2a.txt  72c4c8aa3ed40418.txt  72f6936511f2579e.txt  74f02da512fb01f3.txt  75352a9e03a822c9.txt  7774203710ae95ab.txt  7a84f3032eac2aec.txt  81c5c1305c816f1c.txt  8649682b1382c49c.txt  8e0ff6b1b11991ef.txt  921963f838f0fa73.txt  96b5256d4e0929f3.txt  aaf1172893c53c2a.txt  ad807f131fd271cb.txt  af8f4c327a25d7e8.txt  b15683ed549c0da6.txt  b2e155ba5cb0b269.txt  b5eeb6d2699c83a5.txt  b8d3cfddae3aac0f.txt  bb5688aeb0c4d433.txt  c8623a0b67f52ea2.txt  (+8 more)
docs/data/test-cases/: 103b5635b76f883e.json  10da243dfd96898d.json  10ed09524cefaa0a.json  1102297fa74711eb.json  1165270ed8ec6ce0.json  119932857a922b6c.json  11dbce9392b2e8ec.json  11ddaf5e1a1f8753.json  11e2f905168d4ac8.json  1308aa1cf7573320.json  (+823 more)
docs/export/: influxDbData.txt  prometheusData.txt
docs/history/: history.json
docs/widgets/: duration-trend.json  duration.json  environment.json  history-trend.json  retry-trend.json  severity.json  suites.json  summary.json
scripts/: init_env.sh  init_fresh_system.py  simulate_usage.py
services/: ATLAS.md
tests/: conftest.py  test_data_driven.py  test_search_under_price.py  test_smoke.py
tests/regression/: ATLAS.md
tests/slow/: ATLAS.md
tests/smoke/: ATLAS.md
tests/unit/: ATLAS.md  test_price_parser.py
utils/: ATLAS.md  config.py
(+25 files in other folders)
