[project]
name = "ebay-automation"
version = "0.1.0"
description = "eBay public-site E2E automation suite"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-playwright>=0.5.0",
    "allure-pytest>=2.13.5",
    "pytest-xdist>=3.5.0",
    "ruff>=0.4.7",
    "black>=24.4.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
# pytest.ini is the canonical config file; this section is a fallback.
